--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@types/morgan": "^1.9.9",
         "@typescript-eslint/eslint-plugin": "^7.13.1",
         "@typescript-eslint/parser": "^7.13.1",
+        "autoprefixer": "^10.4.19",
         "dequal": "^2.0.3",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
@@ -55,6 +56,7 @@
         "node-html-parser": "^6.1.13",
         "openapi-types": "^12.1.3",
         "oslllo-svg-fixer": "^3.0.0",
+        "postcss": "^8.4.39",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
         "sass": "^1.77.6",
@@ -64,6 +66,7 @@
         "svelte-markdoc-preprocess": "^2.0.0",
         "svelte-markdown": "^0.4.1",
         "svgtofont": "^4.2.1",
+        "tailwindcss": "^3.4.4",
         "tslib": "^2.6.3",
         "typescript": "^5.5.2",
         "vite": "^5.3.1",
