--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "node-html-parser": "^6.1.13",
         "openapi-types": "^12.1.3",
         "oslllo-svg-fixer": "^3.0.0",
-        "postcss": "^8.4.39",
+        "postcss": "^8.4.38",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
         "sass": "^1.77.6",
@@ -72,6 +72,8 @@
         "vite": "^5.3.1",
         "vite-plugin-dynamic-import": "^1.5.0",
         "vite-plugin-image-optimizer": "^1.1.8",
-        "vitest": "^1.6.0"
+        "vitest": "^1.6.0",
+        "@tailwindcss/typography": "^0.5.13",
+        "prettier-plugin-tailwindcss": "^0.6.4"
     }
 }
