--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@sveltejs/enhanced-img": "^0.1.9",
         "@sveltejs/kit": "^2.5.17",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@tailwindcss/typography": "^0.5.13",
         "@types/compression": "^1.7.5",
         "@types/glob": "^8.1.0",
         "@types/markdown-it": "^13.0.8",
@@ -59,6 +60,7 @@
         "postcss": "^8.4.38",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.6.4",
         "sass": "^1.77.6",
         "sharp": "^0.33.4",
         "svelte": "^4.2.18",
@@ -66,14 +68,12 @@
         "svelte-markdoc-preprocess": "^2.0.0",
         "svelte-markdown": "^0.4.1",
         "svgtofont": "^4.2.1",
-        "tailwindcss": "^3.4.4",
+        "tailwindcss": "4.0.0-alpha.17",
         "tslib": "^2.6.3",
         "typescript": "^5.5.2",
         "vite": "^5.3.1",
         "vite-plugin-dynamic-import": "^1.5.0",
         "vite-plugin-image-optimizer": "^1.1.8",
-        "vitest": "^1.6.0",
-        "@tailwindcss/typography": "^0.5.13",
-        "prettier-plugin-tailwindcss": "^0.6.4"
+        "vitest": "^1.6.0"
     }
 }
